<resources>
    <string name="app_name">DogApp</string>
    <string name="emailLogin">Email or Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="retype_password">Retype Password:</string>
    <string name="create_password">Create Password:</string>
    <string name="username">Username:</string>
    <string name="emailCreate">Email:</string>
    <string name="logOut">Log Out</string>
    <string name="firstAid">First Aid &amp; Contacts</string>
    <string name="settings">Settings</string>
    <string name="breedInfo">Breed Information</string>
    <string name="ageMessage">Age is not specified.</string>
    <string name="breedMessage">Breed is not specified.</string>
    <string name="breedable">Breedable: </string>
    <string name="add_dog">(+) Add dog</string>
    <string name="back">Back</string>
    <string name="profileInfo">Change Profile Information</string>
    <string name="changeDogInfo">Change Dog Information</string>
    <string name="seeMyDogs">See My Dogs</string>
    <string name="dogWalker">I am a Dog Walker</string>
    <string name="noPictureAvailable">No Picture Available</string>
    <string name="foodCalculator">Food Calculator</string>
    <string name="submit">Submit</string>
    <string name="selectDays">For how many days?</string>
    <string name="whichDogs">For which of your dogs do you want to buy food?</string>
    <string name="notifications">Inbox</string>
    <string name="typeName">Type new name:</string>
    <string name="typeEmail">Type new email:</string>
    <string name="typeCurrentPassword">Type current password:</string>
    <string name="typeNewPassword">Type new password:</string>
    <string name="typeBreed">Type new breed:</string>
    <string name="typeAge">Type new age:</string>
    <string name="typeWeight">Type new weight:</string>
    <string name="typeHeight">Type new height:</string>
    <string name="typeMedicalCondition">Type new medical condition(s):</string>
    <string name="changeImage">Change Dog Image</string>
    <string name="removeDog">Remove Dog</string>
    <string name="removeUser">Remove User (ALL DATA WILL BE DELETED).</string>
    <string name="notEating">My dog is not eating.</string>
    <string name="notStopEating">My dog does not stop eating.</string>
    <string name="scratchingSkin">My dog is scratching its skin.</string>
    <string name="notMove">My dog does not want to move.</string>
    <string name="anyOtherSymptom">Symptom checker: what\'s with my dog.</string>
    <string name="emergencyContact">Emergency veterinarians near me.</string>
    <string name="firstAidTitle">First Aid: save your dog!</string>
    <string name="nextVideo">Next Video</string>
    <string name="previousVideo">Previous Video</string>
    <string name="trainingTitle">Training Videos</string>
    <string name="currentVideo">Current video: 1/16</string>



    <string name="hintSelectDogs">Type all/All or the name of the dogs you want to consider.</string>
    <string name="calculatorLongText">Based on the average food consumption of the dog breeds you considered, this is the amount of kilograms and money required. </string>


    <string-array name="myDogsOptions">
        <item name="Dog1">Dog1</item>
        <item name="Dog2">Dog2</item>
        <item name="Dog3">Dog3</item>
    </string-array>

</resources>