<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_cyan"
    tools:context=".FirstAidActivity">

    <Button
        android:id="@+id/btnBackFirstAid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/burlyWood"
        android:text="@string/back"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmergencyContact"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnNotEating"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/notEating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstAidTitle" />

    <Button
        android:id="@+id/btnNotStopEating"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/notStopEating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotEating" />

    <Button
        android:id="@+id/btnScratching"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/scratchingSkin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotStopEating" />

    <Button
        android:id="@+id/btnNotMoving"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/notMove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScratching" />

    <Button
        android:id="@+id/btnSymptomChecker"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/anyOtherSymptom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotMoving" />

    <Button
        android:id="@+id/btnEmergencyContact"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/indian_red"
        android:text="@string/emergencyContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSymptomChecker" />

    <TextView
        android:id="@+id/txtFirstAidTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/firstAidTitle"
        android:textAlignment="center"
        android:textColor="@color/ghost_white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>