<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alice_blue"
    tools:context=".ChangeDogInfoActivity">

    <Spinner
        android:id="@+id/spMyDogsChange"
        android:layout_width="372dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtChangeName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/typeName"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMyDogsChange" />

    <EditText
        android:id="@+id/txtChangeHeight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/typeHeight"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeWeight" />

    <EditText
        android:id="@+id/txtChangeWeight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/typeWeight"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeBreed" />

    <EditText
        android:id="@+id/txtChangeMedCond"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/typeMedicalCondition"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeHeight" />

    <EditText
        android:id="@+id/txtChangeBreed"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/typeBreed"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeName" />

    <EditText
        android:id="@+id/txtChangeAge"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/typeAge"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeBreed" />

    <Button
        android:id="@+id/btnChangeDogImage"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/beige"
        android:text="@string/changeImage"
        app:layout_constraintEnd_toEndOf="@+id/txtChangeMedCond"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtChangeMedCond"
        app:layout_constraintTop_toBottomOf="@+id/spSex" />

    <Button
        android:id="@+id/btnSubmitChangeDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/_light_green"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeDogImage" />

    <Switch
        android:id="@+id/schBreedableChange"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:text="@string/breedable"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeDogImage"
        app:layout_constraintEnd_toEndOf="@+id/txtChangeMedCond"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtChangeMedCond"
        app:layout_constraintTop_toTopOf="@+id/btnChangeDogImage"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnBackChangeDog"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmitChangeDog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/btnSubmitChangeDog"
        app:layout_constraintTop_toTopOf="@+id/btnSubmitChangeDog" />

    <Button
        android:id="@+id/btnRemoveDog"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:background="#DA9E9E"
        android:text="@string/removeDog"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmitChangeDog"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmitChangeDog"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSubmitChangeDog"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spSex"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeMedCond" />



</androidx.constraintlayout.widget.ConstraintLayout>