<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3E50"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/emailCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />


    <EditText
        android:id="@+id/emailCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emailCreate"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <Button
        android:id="@+id/buttonCreateAcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1ABC9C"
        android:onClick="onBtnCreateAcc_Clicked"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/password2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/emailCreate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailCreate"
        app:layout_constraintTop_toBottomOf="@+id/usernameCreate" />


    <EditText
        android:id="@+id/usernameCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/username"
        android:inputType="text"

        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/emailCreate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailCreate"
        app:layout_constraintTop_toBottomOf="@+id/emailCreate" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

</androidx.constraintlayout.widget.ConstraintLayout>